--- a/SOLID/Dependency Inversion/pom.xml
+++ b/SOLID/Dependency Inversion/pom.xml
@@ -20,7 +20,7 @@
           <version>1.12</version>
       </dependency>
       <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-      <dependency>
+      <dependency>FDS
           <groupId>com.fasterxml.jackson.core</groupId>
           <artifactId>jackson-databind</artifactId>
           <version>2.9.8</version>
